20140302
	utils/cc/funct.c - remove out-of-bounds reference
	os/ipaq1110, ip/ipaux.c, os/sa1110 - add default cases to keep compiler happy
20140223
	/dis/sig: use raise not exit for errors
20140105
	incorrect check on keyname in getauthinfo [issue 306]
20130906
	remove redundant code
20130529
	appl/cmd/cpu.b: use Dial, and neither test /dev/draw/new nor bind #d (which is wrong anyway, it's #i for drawing now)
20130423
	mkfiles/mkfile-MacOSX-386: set 32-bit mode, and macosx-version-min to 10.6 [via http://debu.gs/entries/interlude-inferno-at-work]
20121210
	utils/awk/run.c - prevent free of pointer still in use [cinap]
20121205
	appl/cmd/mk/mksubdirs [issue 290 change suggested by powerman]
20120918
	remove unused/unusable debug/setdebug from appl/lib/auth9.b and replace Keyring by Crypt
20120820
	emu/port/devip.c reset headers flag in Conv
20120725
	increase KSTACK for Linux/arm
20120615
	add configuration emu/FreeBSD/emu-g [powerman]
20120509
	utils/libmach: add missing user stack top initialisers, minor changes to sync with 9
20120507
	mkfiles/mkfile-MacOSX-386 change cc to gcc
	emu/MacOSX/win.c null out drawcursor
20120424
	utils/cc/Posix.c and utils/c2l/Posix.c: correct definition of mydup for POSIX dup/dup2
	libbio/bprint.c error handling if flush or print fails
20120305
	add -I$ROOT/(Plan9|Inferno)/include to CFLAGS in mkfiles/^(mkfile-Plan9* mkfile-Inferno*)
		change specific object type to $OBJTYPE in the same
	libmath/fdlibm/fdlibm.h and libmath/dtoa.c, if USE_FPdbleword defined, use FPdbleword to crack doubles into integers
20120304
	rabin(2) added (preliminary)
20120213
	styxservers: add .error operation (preliminary)
20120116
	lib9.h: internally rename qsort as infqsort to avoid C library clash
	lib9/qsort.c: include lib9.h
	lib9/mkfile: move qsort to IMPORTFILES from COMMONFILES
20120103
	avoid re-defining isnan; use isNaN instead
20111231
	Linux/*/include/emu.h adjustments for USE_PTHREADS for non-x86 processors
20111221