@@ -14,6 +14,7 @@ ASFLAGS=
 CC=		arm-gcc -c 
 CFLAGS=		-O\
 		-Wuninitialized -Wunused-variable -Wreturn-type -Wimplicit\
+		-Wno-unused-result\
 		-I$ROOT/Linux/arm/include\
 		-I$ROOT/include\
 		-DLINUX_ARM
